--- a/public/pages/productos.html
+++ b/public/pages/productos.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="../css/output.css">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body class="font-poppins text-gray-50 min-h-full flex flex-col">
     <header>
         <nav>
-            <div class="border-gray-200 fixed w-full z-20 top-0 start-0 md:bg-black xl:bg-black xl:bg-opacity-20 md:bg-opacity-20">
+            <div class="border-gray-200 fixed w-full z-20 top-0 start-0 navProductos md:shadow-md xl:shadow-md">
                 <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-0 md:p-4 xl:p-4">
-                    <div class="max-w-screen-xl flex flex-auto justify-between backdrop-blur-lg md:backdrop-blur-none p-4 md:p-0 xl:p-0">
+                    <div class="max-w-screen-xl flex flex-auto justify-between backdrop-blur-lg shadow-md md:shadow-none p-4 md:p-0 xl:p-0">
                         <div class="flex items-center space-x-3 rtl:space-x-reverse">
                             <img src="../assets/images/monique-logo.png" class="ml-2 h-5 md:h-6 xl:h-10 invert" alt="Monique Logo"/>
                         </div>
@@ -59,6 +60,18 @@
     <main class="flex-1 fondoProductos">
     
         <div class="mt-20 p-5 md:p-7 xl:p-10">
+
+            <div class="relative container mx-auto text-white mb-5 w-2/3 md:w-1/2 xl:w-1/3">
+                <div class="flex items-center bg-black bg-opacity-5 rounded-l-3xl rounded-r-lg">
+                    <!-- Ícono de lupa -->
+                    <i id="lupa-icono" class="fas fa-search absolute transform text-shadow-md text-gray-50 botonLavanda2 border-none sombraInset shadowColor2 bg-opacity-20 p-3 text-lg rounded-l-3xl"></i> 
+                    <!-- Campo de búsqueda -->
+                    <input type="search" id="search-input" placeholder="Buscar productos..." class="shadowColor2 sombraInset2 pl-14 border-0 rounded w-full bg-transparent rounded-l-3xl rounded-r-lg">
+                </div>
+                <div id="suggestions" class="absolute top-full tamañoSugerencia left-8 max-h-52 overflow-y-auto shadowColor2 sombraInset2 z-50 rounded shadow-md backdrop-blur-lg ml-2 mt-2 pl-2 pr-2"></div>
+            </div>
+            
+
             <div class="flex justify-center flex-wrap xl:gap-x-5 md:gap-x-4 gap-x-3">
                 <button data-category="all" type="button" class="sombraInset m-1 hover:border-2 shadowColor2 px-5 py-2 md:px-6 md:py-2.5 xl:px-7 xl:py-2.5 transition-all ease-in duration-100 botonLavanda2 btn border-0 text-shadow-lg overflow-hidden group hover:scale-105 hover:transition-transform h-auto text-base md:text-xl xl:text-2x1 btn-primary text-gray-50 hover:border-gray-200 rounded-full font-semibold text-center mb-3">Ver todo</button>
                 <button data-category="shoes" type="button" class="sombraInset m-1 hover:border-2 shadowColor2 px-5 py-2 md:px-6 md:py-2.5 xl:px-7 xl:py-2.5 transition-all ease-in duration-100 botonLavanda2 btn border-0 text-shadow-lg overflow-hidden group hover:scale-105 hover:transition-transform h-auto text-base md:text-xl xl:text-2x1 btn-primary text-gray-50 hover:border-gray-200 rounded-full font-semibold text-center mb-3">Shoes</button>
